---------------------------------------------------------------------------------------------------
Version: 0.69.74
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.73
Date: 2025-06-29
  Changes:
    - New recipe to make refined concrete locally on Rubia.
    - Ligma charm now works on lumber mill from age of production.
    - Fixed a bug where crapapult was not allowed on space platforms made before new versions of Rubia were installed.
    - Rubia postgame tech now needs lube barrels instead of light oil barrels, because some people would unlock it accidentally, without even noticing.
    - Improved stability with Blueprint Shotgun. Rubia's blueprint shotgun ammo recipe now has a superscript to make it more clear.
---------------------------------------------------------------------------------------------------
Version: 0.69.72
Date: 2025-06-28
  Changes:
    - Yet another crushing industry compat fix. Third time is the charm! This one fixes when a bunch of other mods change the load order.
---------------------------------------------------------------------------------------------------
Version: 0.69.71
Date: 2025-06-28
  Changes:
    - Crushing industry compatibility when the concrete mix setting is turned off.
---------------------------------------------------------------------------------------------------
Version: 0.69.70
Date: 2025-06-28
  Changes:
    - Crushing Industry compatibility
---------------------------------------------------------------------------------------------------
Version: 0.69.69
Date: 2025-06-26
  Changes:
    - Nice version :)
    - Trashsteroid trajectory has been changed: Trashsteroid speed x2, friction x20ish, lifetime +12%. This causes them to cover a lot of ground, and be slow towards the end of their trajectory. This makes them easier to hit, and buffs craptonite walls because trashsteroids now cover about 1.6x as much distance.